[package]
name = "nenya-sentinel"
version = "0.0.1"
edition = "2021"
description = "A standalone rate limiting service using PID control."
#categories = ["algorithms", "web-programming"]
#keywords = ["rate", "limit", "limiting", "throttling", "throttle"]
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[build-dependencies]
tonic-build = "0.11.0"

[dependencies]
prost = "0.12.6"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt"] }
tonic = "0.11.0"
nenya = { path = "../nenya" }
hostname = "0.4.0"
