[package]
name = "nenya"
version = "0.0.2"
edition = "2021"
description = "A Rust crate for adaptive rate limiting and PID control."
categories = ["algorithms", "web-programming"]
keywords = ["rate", "limit", "limiting", "throttling", "throttle"]
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
num-traits = "0.2.19"
log = "0.4.21"

[dev-dependencies]
clap = "4.5.4"
eframe = "0.28.1"
egui = "0.28.1"
egui_plot = "0.28.1"
